# rv_tester

./: .bazelrc  .bzsimrc  .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitlab-ci.yml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  REUSE.toml  SECURITY.md  WORKSPACE  WORKSPACE.bzlmod  assigns.svh  defs.bzl  dependencies.bzl  dmi_driver.sv  dpic_pkg.sv  plusarg_lint.py  repositories.bzl  repositories2.bzl  rv_tester.bzl  rv_tester.cpp  rv_tester.hpp  rv_tester.sv  rv_tester_assert_handler.cpp  rv_tester_clk_mux_glitch_free.sv  rv_tester_clkgen.sv  rv_tester_defines.sv  rv_tester_delay_resp.sv  rv_tester_keeper.sv  rv_tester_lib.sv  rv_tester_mem.sv  rv_tester_pkg.sv  rv_tester_plusargs.cpp  rv_tester_plusargs.h  rv_tester_stall_checker.sv  (+6 more)
aclint_checker/: BUILD.bazel  aclint_checker.bzl  aclint_checker.cpp  aclint_checker.hpp  aclint_checker.sv  aclint_checker_param.hpp
common/: BUILD.bazel  SimJTAG.cc  address_error_policy.h  address_range.h  axi_seqids.hpp  bus_error_list.h  common_defs.hpp  defines.h  endpoint.h  memmap.cpp  memmap.h  rand_gflags.h  remote_bitbang.cc  remote_bitbang.h  rv_tester_flags.h  svdpi.h  transactor.h
common/device_address_map/: BUILD.bazel  device_address_map.cpp  device_address_map.h  device_address_map_plusargs.cpp  device_address_map_plusargs.h
cosim/: BUILD.bazel  README.md  cosim.bzl  cosim.sv  cosim_dpi.cpp  file  project_overrides_gen.bzl  project_overrides_gen.py
cosim/bridge/: BUILD.bazel  README.md  bridge.cpp  bridge.h  bridge_base.h  bridge_params.h  bridge_plusargs.h
cosim/bridge_if/: BUILD.bazel  bridge_if.h  bridge_params.h
cosim/dut_if/: README.md
cosim/svdpi/: BUILD.bazel
cosim/transactions/: BUILD.bazel  transactions.yml
cosim/vpi/: BUILD.bazel  vpi_user.h
cosim/whisper_cov/: BUILD.bazel  arch_sample.cpp  arch_sample.h  arch_sample.sv  arch_sample_extern.h
cosim/whisper_if/: BUILD.bazel  WhisperMessage.h  cva6_whisper.json  iss_utils.h  whisper_client.cpp  whisper_client.h  whisper_client_decl.h  whisper_client_lib.cpp  whisper_client_lib.h  whisper_client_plusargs.h  whisper_client_shm.cpp  whisper_client_shm.h  whisper_client_socket.cpp  whisper_client_socket.h  whisper_client_wrap.h  whisper_decoder.cpp  whisper_decoder.h
csr/: BUILD.bazel  csr_collateral_gen.bzl  csr_collateral_gen.py  csr_map.hpp  csr_map_pkg.sv  csr_param_gen.bzl  csr_param_gen.py  csr_param_override.yaml  csr_spec.yaml  gen_csr_collateral.py
infra/bazel/: BUILD.bazel  dependencies.bzl  dependencies2.bzl  dependencies3.bzl  dependencies4.bzl  dependencies5.bzl  extensions.bzl  extensions2.bzl  get-bazel-output-base  internal_extensions.bzl  internal_repositories.bzl  opensrc_repositories.bzl  repositories.bzl  requirements.txt  rv_cc.bzl  sim.bzl  spike_bin.sh  testlist.bzl  verilog.bzl
infra/bzsim-config/: BUILD.bazel  bzsimconfig.py  sha.json
overlay_driver/: BUILD.bazel  overlay_driver.bzl  overlay_driver.cpp  overlay_driver.hpp  overlay_driver.sv  post_si_pcietc_ce.cpp  post_si_pcietc_ce.hpp  post_si_pcietc_ce_regs.hpp  post_si_pcietc_defs.hpp  post_si_pcietc_ee.cpp  post_si_pcietc_ee.hpp  post_si_pcietc_ee_instr.hpp  post_si_pcietc_ee_regs.hpp  post_si_pcietc_global.cpp  post_si_pcietc_global.hpp  post_si_pcietc_sequence.cpp  post_si_pcietc_sequence.hpp  scratchpad_random_sequence.cpp  scratchpad_random_sequence.hpp
pmcounters/: BUILD.bazel  pmcounters.cpp  pmcounters.hpp
pmu/: BUILD.bazel  core_pmc_spec.csv  pmu.bzl  pmu.cpp  pmu.hpp  pmu.sv  pmu_fragment_gen.bzl  pmu_gen.py  sharedcache_pmc_spec.csv
pwrmgmt/: BUILD.bazel  dfs_sequence.cpp  dfs_sequence.hpp  patch_control_sequence.cpp  patch_control_sequence.hpp  patch_utils.cpp  patch_utils.hpp  pwrmgmt.bzl  pwrmgmt.cpp  pwrmgmt.hpp  pwrmgmt.sv  reset_sequence.cpp  reset_sequence.hpp  smc_axi_sequence.cpp  smc_axi_sequence.hpp  thub_sequence.cpp  thub_sequence.hpp
rv_tester_delay_resp_tb/: BUILD.bazel  rv_tester_delay_resp_tb.vlt  rv_tester_delay_resp_tb_check.sv  rv_tester_delay_resp_tb_top.sv  rv_tester_delay_resp_wrapper.sv
rv_tester_delay_resp_tb/testlists/: smoke.py
scripts/csr/: BUILD.bazel  csr_param_gen.bzl  csr_param_gen.py  csr_spec.yaml
scripts/preload_axi_llc/: BUILD.bazel  preload_axi_llc.cpp  preload_axi_llc.hpp
src/cosim/: BUILD.bazel  README.md  cosim.bzl  cosim.sv  cosim_off_stubs.cpp  project_overrides_gen.bzl  project_overrides_gen.py
src/sysmod/: BUILD.bazel  README.md  device.cpp  device.h  io_device.h  pm_common.h  sysmod.bzl  sysmod.cpp  sysmod.h  sysmod.sv  sysmod_params.hpp  sysmod_plusargs.h  sysmod_rpc.h
sw_testbench/: BUILD.bazel  README.md  dpi.cpp  gflags.cpp  memmap.json  pulp_platform_verilator_waiver.vlt  rv_tester_axi.yml  rv_tester_hart.yml  sv_mock.cpp  sw_1c_rv_tester_hart.yml  sw_1c_rv_tester_platform.yml  sw_1c_topology.yml  sw_2c_rv_tester_hart.yml  sw_2c_rv_tester_platform.yml  sw_2c_topology.yml  sw_tb.cpp  sw_testbench_vcs_waiver.config  top.sv  topology.yml  whisper.json
sw_testbench/profiling/: BUILD.bazel  README.md  run_profiler.py  wall_clock_profiler.cpp
sw_testbench/testlists/: BUILD.bazel  infinite.S  nop.S  sanitize.py  smoke.py  valgrind.py
sysmod/: BUILD.bazel  README.md  device.cpp  device.h  io_device.h  pm_common.h  sysmod.bzl  sysmod.cpp  sysmod.h  sysmod.sv  sysmod_extern.h  sysmod_params.hpp  sysmod_pkg.sv  sysmod_plusargs.h  sysmod_rpc.h
sysmod/aclint/: BUILD.bazel  aclint.cpp  aclint.h
sysmod/aplic/: BUILD.bazel  aplic_device.cpp  aplic_device.h
sysmod/aplic_mmr/: BUILD.bazel  aplic_mmr.cpp  aplic_mmr.h
sysmod/cla_cfg/: BUILD.bazel  cla_cfg.cpp  cla_cfg.h  cla_defines.h  pll_xtor.h
sysmod/clint/: BUILD.bazel  clint.cpp  clint.h
sysmod/dm/: BUILD.bazel  dm.cpp  dm.h
sysmod/heartbeat/: BUILD.bazel  heartbeat.cpp  heartbeat.h
sysmod/htif/: BUILD.bazel  htif.cpp  htif.h
sysmod/io_dev/: BUILD.bazel  io_dev.cpp  io_dev.h
sysmod/jtag_xtor/: BUILD.bazel  jtag_xtor.sv
sysmod/mem/: BUILD.bazel  SparseMem.cpp  SparseMem.hpp  mem.cpp  (+3 more)
system_model/: BUILD.bazel  device.h  rv_tester_system_model.cpp  rv_tester_system_model.sv  sysmod.cpp  sysmod.h
(+490 files in other folders)
