load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_hdl//verilog:providers.bzl", "verilog_library")

verilog_library(
    name = "dpic_pkg",
    srcs = ["dpic_pkg.sv"],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "no_cosim",
    srcs = ["define_no_cosim.sv"],
)

verilog_library(
    name = "defines",
    srcs = [
        "rv_tester_defines.sv",
    ],
    deps = ["pkg"],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "cosim",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "cosim_off",
    flag_values = {
      ":cosim" : "False",
    }
)

filegroup(
    name = "rv_tester_topology",
    srcs = [
        "//transactors/axi_sw:axi_sw_attrs.yml",
        "rv_tester_topology.yml",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["rv_tester.cpp", "rv_tester_assert_handler.cpp", "rv_tester_pkg.sv", "rv_tester_defines.sv", "dmi_driver.sv", "rv_tester.sv", "rv_tester_clkgen.sv", "rv_tester_transactions.yml"])
