load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("@bzsim//:verilog_unit.bzl", "verilog_unit")
load("@bzsim//:sim.bzl", "sim_test_suite")

config_setting(
    name = "use_bzlmod",
    define_values = {"use_bzlmod": "1"},
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "dpic_pkg",
    srcs = ["dpic_pkg.sv"],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "rv_tester_pkg",
    srcs = ["rv_tester_pkg.sv"],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "defines",
    srcs = [ "rv_tester_defines.sv", ],
    deps = [ "rv_tester_pkg" ],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "rv_tester_tick_generator",
    srcs = ["rv_tester_tick_generator.sv"],
    deps = [
        "@cvm//:plusargs_sv",
        "@cvm//:random_sv",
        "@cvm//:topology_sv",
    ],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "cosim",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "cosim_off",
    flag_values = {
      ":cosim" : "False",
    }
)

verilog_library(
    name = "no_cosim",
    srcs = ["define_no_cosim.sv"],
)

filegroup(
    name = "rv_tester_topology",
    srcs = [
        "//transactors/axi_sw:axi_sw_attrs.yml",
        "rv_tester_topology.yml",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "plusargs",
    srcs = [":rv_tester_plusargs.cpp"],
    hdrs = [":rv_tester_plusargs.h"],
    deps = ["@cvm//:plusargs", "@cvm//:logger"],
    strip_include_prefix = ".",
    include_prefix = "rv_tester",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "structs",
    hdrs = [":rv_tester_structs.h"],
    strip_include_prefix = ".",
    include_prefix = "rv_tester",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "rv_tester_mem",
    srcs = [
        "@rv_tester//:rv_tester_mem.sv",
    ],
    deps = [
        "@opensrc-axi_llc//:axi_llc",
        ":rv_tester_delay_resp",
    ],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "rv_tester_keeper",
    srcs = [
        "@rv_tester//:rv_tester_keeper.sv",
    ],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "rv_tester_lib",
    srcs = ["rv_tester_lib.sv"],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "rv_tester_delay_resp",
    srcs = ["rv_tester_delay_resp.sv"],
    deps = [
        "@opensrc-axi//:axi",
        ":rv_tester_lib",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["rv_tester.cpp", "rv_tester_assert_handler.cpp", "rv_tester_pkg.sv", "rv_tester_defines.sv", "dmi_driver.sv", "rv_tester.sv", "rv_tester_clkgen.sv", "rv_tester_mem.sv", "rv_tester_delay_resp.sv", "rv_tester_transactions.yml", "rv_tester_axi_typedef.svh", "rv_tester_axi_assign.svh", "rv_tester_stall_checker.sv", "rv_tester_plusargs.cpp", "rv_tester_plusargs.h", "rv_tester_structs.h", "rv_tester_lib.sv", "rv_tester_tick_generator.sv", "rv_tester_keeper.sv" ])
