module(name = "rv_tester", version = "0.0.0")

# BCR dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_m4", version = "0.2.3")
bazel_dep(name = "rules_flex", version = "0.2.1")
bazel_dep(name = "rules_bison", version = "0.2.2")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "boost.algorithm", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.circular_buffer", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.format", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.io", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.iostreams", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.program_options", version = "1.89.0.bcr.2")
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
bazel_dep(name = "fmt", version = "9.1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")

# Upstream Verilator + verilog_library rules (same as cvm)
bazel_dep(name = "rules_verilator", version = "1.1.0")
bazel_dep(name = "rules_verilog", version = "1.1.0")
# Reuse cvm's verilator pin (Python 3.9 toolchain blocks rules_venv 5.046.bcr.3).
single_version_override(
    module_name = "verilator",
    version = "5.046",
)

# cvm lives in the parent directory (on-disk: cvm/rv_tester/). Re-use cvm's
# dual-emitting rules_hdl_compat shim so downstream Bazel-6 consumers keep
# seeing the same @rules_hdl//verilog:providers.bzl%VerilogInfo.
bazel_dep(name = "cvm", version = "0.0.0")
local_path_override(module_name = "cvm", path = "..")

bazel_dep(name = "rules_hdl", version = "0.0.0")
local_path_override(module_name = "rules_hdl", path = "../bazel/rules_hdl_compat")

# Fail-on-call stub so @whisper's BUILD `load("@pybind11_bazel//:build_defs.bzl", ...)`
# resolves. The pybind targets aren't reached on the smoke path. TODO(open-source):
# drop once whisper has a public bzlmod-friendly fork.
bazel_dep(name = "pybind11_bazel", version = "0.0.0")
local_path_override(module_name = "pybind11_bazel", path = "third_party/pybind11_bazel_stub")

# Python toolchain - use Python 3.9 to match deps requirements
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.9",
)

# Python pip dependencies for rv_tester
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rv_tester_pypi",
    python_version = "3.9",
    requirements_lock = "//bazel:requirements.txt",
)
use_repo(pip, "rv_tester_pypi")

# Remaining externals still come from aus-gitlab. The declarations live in
# //bazel:external_deps.bzl so they're shared with WORKSPACE-mode (Bazel-6).
# TODO(open-source): mirror each to a public source (tenstorrent/whisper for
# the RISC-V ISS; nlohmann/json from BCR for the JSON parser) and re-publish
# the rest of the Tenstorrent-owned forks before this repo can build offline.
rv_tester_external = use_extension("//bazel:external_deps_ext.bzl", "rv_tester_external_deps_ext")
use_repo(
    rv_tester_external,
    "CoreArchChecker",
    "mem_manager",
    "whisper",
    "opensrc-nlohmann-json",
)
