module(name = "rv_tester", version = "0.0.0")

# BCR dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_m4", version = "0.2.3")
bazel_dep(name = "rules_flex", version = "0.2.1")
bazel_dep(name = "rules_bison", version = "0.2.2")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "boost.algorithm", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.circular_buffer", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.format", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.io", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.iostreams", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.program_options", version = "1.89.0.bcr.2")
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
bazel_dep(name = "fmt", version = "9.1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")

# Upstream Verilator + verilog_library rules (same as cvm)
bazel_dep(name = "rules_verilator", version = "1.1.0")
bazel_dep(name = "rules_verilog", version = "1.1.0")
# Reuse cvm's verilator pin (Python 3.9 toolchain blocks rules_venv 5.046.bcr.3).
single_version_override(
    module_name = "verilator",
    version = "5.046",
)

# cvm lives in the parent directory (on-disk: cvm/rv_tester/). Re-use cvm's
# dual-emitting rules_hdl_compat shim so downstream Bazel-6 consumers keep
# seeing the same @rules_hdl//verilog:providers.bzl%VerilogInfo.
bazel_dep(name = "cvm", version = "0.0.0")
local_path_override(module_name = "cvm", path = "..")

bazel_dep(name = "rules_hdl", version = "0.0.0")
local_path_override(module_name = "rules_hdl", path = "../bazel/rules_hdl_compat")

# Python toolchain - use Python 3.9 to match deps requirements
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.9",
)

# Python pip dependencies for rv_tester
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rv_tester_pypi",
    python_version = "3.9",
    requirements_lock = "//bazel:requirements.txt",
)
use_repo(pip, "rv_tester_pypi")

# @whisper has its own MODULE.bazel (declares pybind11_bazel / boost / lz4 /
# zlib transitive deps via BCR). Use bazel_dep + git_override so bzlmod
# processes those declarations — that's how @whisper'\''s BUILD load of
# @pybind11_bazel//:build_defs.bzl resolves without a top-level shim.
bazel_dep(name = "whisper", version = "0.0.0")
git_override(
    module_name = "whisper",
    commit = "c349731df9bab5281d74ce862aebfcd72cd85f9e",
    remote = "https://aus-gitlab.local.tenstorrent.com/riscv/swerv-iss.git",
)

# Remaining externals don't have their own MODULE.bazel. Declarations live
# in //bazel:external_deps.bzl so they're shared with WORKSPACE-mode
# (Bazel-6). TODO(open-source): mirror each to a public source
# (tenstorrent/whisper for the RISC-V ISS; nlohmann/json from BCR for the
# JSON parser) and re-publish the rest of the Tenstorrent-owned forks
# before this repo can build offline.
rv_tester_external = use_extension("//bazel:external_deps_ext.bzl", "rv_tester_external_deps_ext")
use_repo(
    rv_tester_external,
    "CoreArchChecker",
    "mem_manager",
    "opensrc-axi",
    "opensrc-common_cells",
    "opensrc-nlohmann-json",
)
