exports_files(["aclint_checker.cpp", "aclint_checker.hpp", "aclint_checker.sv", "aclint_checker_param.hpp"])

cc_library(
    name    = "aclint_checker_param",
    hdrs    =[
        "aclint_checker_param.hpp"
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
    strip_include_prefix = ".",
)