load("@rules_hdl//verilog:providers.bzl", "verilog_library")

verilog_library(
    name = "cosim",
    srcs = ["cosim.sv"],
    deps = [
            "//:defines",
            "//cosim/transactions:sv_lib",
            "@cvm//:plusargs_sv",
            "//:dpic_pkg",
           ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cosim_dpi",
    srcs = ["cosim_dpi.cpp"],
    deps = [
            "//cosim/dut_if/rvfi:rvfi",
            "@cvm//:plusargs",
           ],
    alwayslink = True,
    visibility = ["//visibility:public"],
)
