exports_files([
    "overlay_driver.sv",
    "overlay_driver.cpp",
    "overlay_driver.hpp",
    "scratchpad_random_sequence.cpp",
    "scratchpad_random_sequence.hpp",
    "post_si_pcietc_sequence.hpp",
    "post_si_pcietc_sequence.cpp",
    "post_si_pcietc_global.hpp",
    "post_si_pcietc_global.cpp",
    "post_si_pcietc_ce.hpp",
    "post_si_pcietc_ce.cpp",
    "post_si_pcietc_ce_regs.hpp",
    "post_si_pcietc_ce_regs.cpp",
    "post_si_pcietc_ee.hpp",
    "post_si_pcietc_ee.cpp",
    "post_si_pcietc_ee_regs.hpp",
    "post_si_pcietc_ee_instr.hpp",
    "post_si_pcietc_ee_regs.cpp",
    "post_si_pcietc_defs.hpp"
    ])


