exports_files(["pwrmgmt.sv", "pwrmgmt.cpp", "pwrmgmt.hpp", "reset_sequence.cpp", "reset_sequence.hpp", "smc_axi_sequence.cpp", "smc_axi_sequence.hpp", "patch_control_sequence.cpp", "patch_control_sequence.hpp", "thub_sequence.cpp","thub_sequence.hpp", "dfs_sequence.cpp", "dfs_sequence.hpp", "thub_sequence.cpp", "thub_sequence.hpp"])
