exports_files(["pwrmgmt.sv", "pwrmgmt.cpp", "pwrmgmt.hpp", "reset_sequence.cpp", "reset_sequence.hpp", "smc_axi_sequence.cpp", "smc_axi_sequence.hpp", "patch_control_sequence.cpp", "patch_control_sequence.hpp", "thub_sequence.cpp","thub_sequence.hpp", "dfs_sequence.cpp", "dfs_sequence.hpp", "thub_sequence.cpp", "thub_sequence.hpp"])

cc_library(
    name = "pwrmgmt_hdr",
    hdrs = ["pwrmgmt.hpp"],
    includes = ["."],
    deps = [
        "@rv_tester//common/device_address_map:device_address_map",
        "@cvm//:registry",
        "@cvm//:logger",
    ],
    visibility = ["//visibility:public"],
)
