cc_library(
    name = "device",
    srcs = ["@rv_tester//sysmod:device.cpp"],
    hdrs = ["@rv_tester//sysmod:device.h"],
    deps = [
        "@cvm//:topology",
        "@cvm//:plusargs",
        "@cvm//:logger",
    ],
    alwayslink = True,
    linkstatic = True,
    visibility = ["//visibility:public"],
)

exports_files(glob(["sysmod.*", "device.*"]))
