cc_library(
    name = "device",
    srcs = ["@rv_tester//sysmod:device.cpp"],
    hdrs = ["@rv_tester//sysmod:device.h",
            "@rv_tester//sysmod:pm_common.h"],
    deps = [
        "@cvm//:topology",
        "@cvm//:plusargs",
        "@cvm//:logger",
        "@cvm//:messenger",
        "@rv_tester//common:common",
    ],
    alwayslink = True,
    linkstatic = True,
    visibility = ["//visibility:public"],
)

exports_files(glob(["sysmod.*", "device.*", "pm_common.*"]))
