cc_library(
    name = "device",
    srcs = ["@rv_tester//sysmod:device.cpp"],
    hdrs = ["@rv_tester//sysmod:device.h",
            "@rv_tester//sysmod:io_device.h",
            "@rv_tester//sysmod:pm_common.h"],
    deps = [
        "@cvm//:topology",
        "@cvm//:plusargs",
        "@cvm//:logger",
        "@cvm//:messenger",
        "@rv_tester//common:common",
        "//sysmod:sysmod_plusargs"
    ],
    alwayslink = True,
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sysmod_plusargs",
    hdrs = ["sysmod_plusargs.h"],
    deps = ["@cvm//:plusargs"],

    visibility = ["//visibility:public"],
)

exports_files(glob(["sysmod.*", "device.*", "pm_common.*","sysmod_params.hpp", "sysmod_rpc.h"]))

cc_library(
    name    = "sysmod_params",
    hdrs    =[
        "sysmod_params.hpp"
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
    strip_include_prefix = ".",
)
