load("@rules_hdl//verilog:providers.bzl", "verilog_library")

verilog_library(
    name = "system_model",
    srcs = glob(["*.sv"]),
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "device",
    hdrs = ["device.h"],
    strip_include_prefix = "//system_model",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "system_model_dpi",
    srcs = [
      "sysmod.cpp",
    ],
    hdrs = [
      "sysmod.h",
      "device.h",
    ],
    deps = [
      "//:common",
      "//system_model/clint:clint",
      "//system_model/htif:htif",
      "//system_model/mem:mem" ],
    alwayslink = True,
    visibility = ["//:__pkg__"],
)
