cc_library(
    name     = "bridge",
    hdrs     = ["bridge_base.h", "bridge.h"],
    srcs     = ["bridge.cpp"],
    deps     = [
                "//:structs",
                "//cosim/utils/general:util",
                "//cosim/whisper_if:whisper_if",
                "//cosim/whisper_if:whisper_decoder",
                "//cosim/bridge_if:bridge_if",
                "//common:common",
                "@CoreArchChecker//src:cac_core",
                "@CoreArchChecker//src:cac_lib",
                "@cvm//:plusargs",
                "@cvm//:logger",
                "@cvm//:random",
                "@cvm//:topology",
                "@fmt//:fmt",
                "//sysmod/htif:htif",
                "//:plusargs",
               ],
    data     = [
                "@whisper//:whisper",
               ],
    alwayslink = True,
    visibility = ["//visibility:public"],
    strip_include_prefix = ".",
)

