cc_library(
    name     = "bridge",
    hdrs     = ["bridge_base.h", "bridge.h"],
    srcs     = ["bridge.cpp"],
    deps     = [
                "//:structs",
                "//cosim/utils/general:util",
                "//cosim/whisper_if:whisper_if",
                "//cosim/whisper_if:whisper_decoder",
                "//cosim/bridge_if:bridge_if",
                "//common:common",
                "//csr:csr_map",
                "//common:parser",
                "@CoreArchChecker//src:cac_core",
                "@CoreArchChecker//src:cac_lib",
                "@cvm//:plusargs",
                "@cvm//:logger",
                "@cvm//:random",
                "@cvm//:topology",
                "@fmt//:fmt",
                "//sysmod/htif:htif",
                "//:plusargs",
                "//cosim/dut_if/rvfi:rvfi_plusargs",
                "//cosim/utils/eot:eot_plusargs",
                "//sysmod:sysmod_plusargs",
                "//sysmod:sysmod_params",
                "//sysmod/trickbox:trickbox",
               ],
    data     = [
                "@whisper//:whisper",
               ],
    alwayslink = True,
    visibility = ["//visibility:public"],
    strip_include_prefix = ".",
)

cc_library(
    name    = "bridge_plusargs",
    hdrs    = ["bridge_plusargs.h"],
    deps    = ["@cvm//:plusargs"],

    visibility = ["//visibility:public"],
)
