cc_library(
    name     = "bridge_if",
    hdrs     = [
                "bridge_if.h",
                "bridge_params.h",
               ],
    deps = [
        "@CoreArchChecker//src:cac_lib",
        "//common/device_address_map:device_address_map",
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
    strip_include_prefix = ".",
)
